pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/import_merging/src/export_nat_2.ph
use super.*;
pub use nat.Nat;
