pamc/src/tests/sample_code/should_fail/multi_file/bind/transparency_not_quasi_ancestor_of_current_mod/src/mod.ph
mod nat;
use nat.Nat.*;

pub let(pack.nat) _3 = S(S(S(O)));
